// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`safelink management addRule allows admins to add rules 1`] = `
Object {
  "action": "tools.ozone.safelink.defs#block",
  "comment": "Known phishing domain targeting users",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "user(0)",
  "eventType": "tools.ozone.safelink.defs#addRule",
  "id": 1,
  "pattern": "tools.ozone.safelink.defs#domain",
  "reason": "tools.ozone.safelink.defs#phishing",
  "url": "https://malicious-site.com",
}
`;

exports[`safelink management queryEvents allows querying safelink events 1`] = `
Array [
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Escalated to block",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#updateRule",
    "id": 10,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://events-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#warn",
    "comment": "Initial rule creation",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 9,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://events-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#warn",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 8,
    "pattern": "tools.ozone.safelink.defs#url",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://query-test2.com/specific-path",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 7,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://query-test1.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 6,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://remove-test2.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Removing rule - false positive",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#removeRule",
    "id": 5,
    "pattern": "tools.ozone.safelink.defs#url",
    "reason": "tools.ozone.safelink.defs#csam",
    "url": "https://remove-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Rule to be removed",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 4,
    "pattern": "tools.ozone.safelink.defs#url",
    "reason": "tools.ozone.safelink.defs#csam",
    "url": "https://remove-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Updated: confirmed phishing site",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#updateRule",
    "id": 3,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://update-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#warn",
    "comment": "Initially marked as spam",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 2,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://update-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Known phishing domain targeting users",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "eventType": "tools.ozone.safelink.defs#addRule",
    "id": 1,
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://malicious-site.com",
  },
]
`;

exports[`safelink management queryRules allows querying all active rules 1`] = `
Array [
  Object {
    "action": "tools.ozone.safelink.defs#warn",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "pattern": "tools.ozone.safelink.defs#url",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://query-test2.com/specific-path",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://query-test1.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#spam",
    "url": "https://remove-test2.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Updated: confirmed phishing site",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://update-test.com",
  },
  Object {
    "action": "tools.ozone.safelink.defs#block",
    "comment": "Known phishing domain targeting users",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "user(0)",
    "pattern": "tools.ozone.safelink.defs#domain",
    "reason": "tools.ozone.safelink.defs#phishing",
    "url": "https://malicious-site.com",
  },
]
`;
